<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pprl-service-parent</artifactId>
        <groupId>de.unileipzig.dbs</groupId>
        <version>2.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pprl-service-protocol-manager</artifactId>
    <name>PPRL Service Protocol manager</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dep.jsonpath.version>2.9.0</dep.jsonpath.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-service-data-owner</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-service-linkage-unit</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-service-data-generator</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-core-encoder</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-core-matcher</artifactId>
            <version>2.0</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${dep.jsonpath.version}</version>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>spring-boot</classifier>
                            <mainClass>
                                de.unileipzig.dbs.pprl.service.protocol.PprlProtocolApplication
                            </mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>